--- a/app.json
+++ b/app.json
@@ -5,6 +5,16 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
+    ],
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "app/assets/fonts/alexandria.ttf"
+          ]
+        }
+      ]
     ]
   }
 }
