feat: home done

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "key-card",
     "slug": "key-card",
     "version": "1.0.0",
+    "orientation": "portrait",
     "assetBundlePatterns": [
       "**/*"
     ],
