added animated splah

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "key-card",
+    "name": "Pop Card",
     "slug": "key-card",
     "version": "1.0.0",
     "orientation": "portrait",
