--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.19",
-    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
     "expo": "~50.0.8",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-bootsplash": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
