--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server --watch server.json"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@tanstack/react-query": "^5.34.1",
     "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "expo": "~50.0.8",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
     "react": "18.2.0",
@@ -23,10 +27,11 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "typescript": "^5.3.0",
-    "expo-linear-gradient": "~12.7.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "json-server": "^1.0.0-alpha.23"
   },
   "private": true
 }
