--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch server.json"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -22,11 +23,13 @@
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.73.4",
     "react-native-bootsplash": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "typescript": "^5.3.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
