--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-bootsplash": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "toastify-react-native": "^5.0.0",
     "typescript": "^5.3.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
