--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.51.4",
     "react-native": "0.73.4",
     "react-native-bootsplash": "^4.1.5",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "toastify-react-native": "^5.0.0",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-crypto-js": "^1.0.3",
     "json-server": "^1.0.0-alpha.23"
   },
   "private": true
