--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.73.4",
     "react-native-bootsplash": "^4.1.5",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-mask-text": "^0.14.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "toastify-react-native": "^5.0.0",
