--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "toastify-react-native": "^5.0.0",
     "typescript": "^5.3.0",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-crypto": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
