--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "expo": "~50.0.8",
+    "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
@@ -28,14 +29,14 @@
     "react-native": "0.73.4",
     "react-native-bootsplash": "^4.1.5",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-mask-text": "^0.14.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "toastify-react-native": "^5.0.0",
     "typescript": "^5.3.0",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "expo-crypto": "~12.8.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
