--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/drawer": "^6.7.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.34.1",
@@ -30,7 +31,9 @@
     "react-native-bootsplash": "^4.1.5",
     "react-native-crypto-js": "^1.0.0",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-mask-text": "^0.14.2",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "toastify-react-native": "^5.0.0",
